# internet_radio_v3

./: .gitignore  CMakeLists.txt  getting_url_and_codec.md  gpio_constraints.md  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old  stations.json  user_manual.md
components/app_config/: CMakeLists.txt  app_config.c
components/app_config/include/: app_config.h
components/ir_remote/: CMakeLists.txt  Kconfig.projbuild  ir_remote.c
components/ir_remote/include/: ir_remote.h
components/pcm5122_board/: CMakeLists.txt  board.c  board.h  board_def.h  board_pins_config.c  board_pins_config.h  gpio_assignments.h  pcm5122_driver.c  pcm5122_driver.h
es8388_board_backup/: CMakeLists.txt  board.c  board.h  board_def.h  board_pins_config.c  component.mk  es8388_driver.c
main/: CMakeLists.txt  audio_pipeline_manager.c  audio_pipeline_manager.h  encoders.c  encoders.h  gpio_assignments.h  internet_radio_adf.c  internet_radio_adf.h  ir_component_requirements.md  lvgl_ssd1306_setup.c  lvgl_ssd1306_setup.h  screens.c  screens.h  station_data.c  web_server.c
schematic/: fp-info-cache  fp-lib-table  schematic.kicad_pcb  schematic.kicad_prl  schematic.kicad_pro  schematic.kicad_sch  schematic_bom.csv  sym-lib-table
schematic/audio_boards.pretty/: pcm5122_module.kicad_mod
schematic/oled128x64_spi.pretty/: oled128x64_spi.kicad_mod
