# set(COMPONENT_SRCS "internet_radio_adf.c" "audio_pipeline_manager.c")
# set(COMPONENT_ADD_INCLUDEDIRS .)


# idf_component_register(PRIV_REQUIRES esp_wifi nvs_flash wifi_provisioning)

# register_component()

set(COMPONENT_ADD_INCLUDEDIRS "")

idf_component_register(SRCS  "internet_radio_adf.c" "audio_pipeline_manager.c" "lvgl_ssd1306_setup.c" "screens.c" "station_data.c" "web_server.c"
                            "encoders.c" "ir_rmt.c"
                       PRIV_REQUIRES esp_wifi nvs_flash wifi_provisioning audio_pipeline audio_stream esp_peripherals esp_driver_rmt esp_http_server spiffs
                       REQUIRES esp_lcd
                       INCLUDE_DIRS "." "../components/pcm5122_board")